# grafika-silnik3d

./: .gitignore  meson.build  run
.cache/clangd/index/: main.cpp.0C1BA0E0BD565408.idx
include/: camera.hpp  crosshair.hpp  cube.hpp  enemy.hpp  floor.hpp  globals.hpp  mesh.hpp  player.hpp  ray.hpp  renderer.hpp  shader.hpp  world.hpp
shaders/: crosshair.vs  default.fs
sprawozdanie/: Makefile  sprawozdanie.md
src/: enemy.cpp  main.cpp  meson.build  renderer.cpp  world.cpp
